<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_routes"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/nav_routes" />
    <item
        android:id="@+id/nav_terminals"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/nav_terminals" />
    <item
        android:id="@+id/nav_saved"
        android:icon="@android:drawable/star_on"
        android:title="@string/nav_saved" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
